# root

./: .gitignore  CHANGELOG.md  README.md  TODO.md  WORKLOG.md  pyproject.toml  reinstall.ps1
pytest-cache-files-ihs1kx4a/v/cache/: nodeids
src/root_cli/: __init__.py  __main__.py  app.py  candidates.py  cli.py  config.py  history.py  install.py  matcher.py  paths.py
src/root_cli/shell/: __init__.py  root.cmd  root.fish  root.ps1  root.sh
tests/: test_candidates.py  test_config.py  test_history.py  test_install.py  test_matcher.py
